updated at: 2020-03-03 21:17, VRoid向け瞳テクスチャ「空色に溶ける」 - lyco+musica - BOOTH

--- a/VRChat/38/1267438.html
+++ b/VRChat/38/1267438.html
@@ -58,6 +58,8 @@
     "js_const_pixiv_fanbox_endpoint">
     <meta content="22" name="js_const_max_length_japanese">
     <meta content="60" name="js_const_max_length_overseas">
+    <meta content="30" name=
+    "js_const_stock_reservation_min_stock_amount">
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
@@ -121,7 +123,7 @@
                           "u-d-flex u-align-items-center">
                             <img alt="lyco+musica" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/188035/icon_image/4c747c31-cec4-4544-8375-830daf402d78_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/188035/icon_image/5ff739a7-5370-467a-8233-01b6bd85a065_base_resized.jpg">
                             <div class="u-text-ellipsis">
                               lyco+musica
                             </div>
