updated at: 2020-03-03 22:49, 誕生日キャラパネル - ワールドギミック - Takuya Tazoe - BOOTH

--- a/VRChat/07/1248107.html
+++ b/VRChat/07/1248107.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      誕生日キャラパネル - ワールドギミック - ConsoleSoup - BOOTH
+      誕生日キャラパネル - ワールドギミック - Takuya Tazoe - BOOTH
     </title>
     <meta name="description" content=
     "■アップデート履歴 2019.02.26 - 初版リリース 【改変可】【商用可】【アバターサービス利用可】">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "誕生日キャラパネル - ワールドギミック - ConsoleSoup - BOOTH">
+    "誕生日キャラパネル - ワールドギミック - Takuya Tazoe - BOOTH">
     <meta name="twitter:description" content=
     "■アップデート履歴 2019.02.26 - 初版リリース 【改変可】【商用可】【アバターサービス利用可】">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e7b87c36-9f3a-4f4c-90ee-32cdd490dac6/i/1248107/1d112423-81e9-4f04-8cc5-3ce43983732f_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "誕生日キャラパネル - ワールドギミック - ConsoleSoup - BOOTH">
+    "誕生日キャラパネル - ワールドギミック - Takuya Tazoe - BOOTH">
     <meta property="og:description" content=
     "■アップデート履歴 2019.02.26 - 初版リリース 【改変可】【商用可】【アバターサービス利用可】">
     <meta property="og:image" content=
@@ -58,6 +58,8 @@
     "js_const_pixiv_fanbox_endpoint">
     <meta content="22" name="js_const_max_length_japanese">
     <meta content="60" name="js_const_max_length_overseas">
+    <meta content="30" name=
+    "js_const_stock_reservation_min_stock_amount">
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
@@ -119,11 +121,11 @@
                           href="https://consolesoup.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ConsoleSoup" class=
+                            <img alt="Takuya Tazoe" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5448764/icon_image/45095018-eb6f-4880-9615-dd52d952171d_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ConsoleSoup
+                              Takuya Tazoe
                             </div>
                           </div></a>
                         </div>
@@ -276,7 +278,7 @@
                           "https://booth.pm/ja/items/1248107"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "誕生日キャラパネル - ワールドギミック | ConsoleSoup"
+                          "誕生日キャラパネル - ワールドギミック | Takuya Tazoe"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
