updated at: 2020-03-03 22:57, 【VRchat想定】黒ネコネックレス - MIUKI&#39;S SHOP - BOOTH

--- a/VRChat/30/1241030.html
+++ b/VRChat/30/1241030.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRchat想定】黒ネコネックレス - みうきのショップ - BOOTH
+      【VRchat想定】黒ネコネックレス - MIUKI'S SHOP - BOOTH
     </title>
     <meta name="description" content=
     "VRC想定モデルです。 2680ポリゴンです。 再配布以外ご自由にどうぞ。 何かありましたら@hideshine0119まで連絡ください。 中にはFBXファイル・unitypackage・テクスチャ画像（影あり・なし計二枚）が同封されてます。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRchat想定】黒ネコネックレス - みうきのショップ - BOOTH">
+    "【VRchat想定】黒ネコネックレス - MIUKI'S SHOP - BOOTH">
     <meta name="twitter:description" content=
     "VRC想定モデルです。 2680ポリゴンです。 再配布以外ご自由にどうぞ。 何かありましたら@hideshine0119まで連絡ください。 中にはFBXファイル・unitypackage・テクスチャ画像（影あり・なし計二枚）が同封されてます。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e136fa4e-7f1d-49be-89ef-2cf6b27f478b/i/1241030/8cbb47a9-b17f-4c36-9242-e60aa89f04f5_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRchat想定】黒ネコネックレス - みうきのショップ - BOOTH">
+    "【VRchat想定】黒ネコネックレス - MIUKI'S SHOP - BOOTH">
     <meta property="og:description" content=
     "VRC想定モデルです。 2680ポリゴンです。 再配布以外ご自由にどうぞ。 何かありましたら@hideshine0119まで連絡ください。 中にはFBXファイル・unitypackage・テクスチャ画像（影あり・なし計二枚）が同封されてます。">
     <meta property="og:image" content=
@@ -120,11 +120,11 @@
                           href="https://miukisas.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="みうきのショップ" class=
+                            <img alt="MIUKI'S SHOP" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5553052/icon_image/327d5739-3af0-4c06-8e94-c58f15422bc1_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              みうきのショップ
+                              MIUKI'S SHOP
                             </div>
                           </div></a>
                         </div>
@@ -223,7 +223,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1241030"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="【VRchat想定】黒ネコネックレス | みうきのショップ"
+                          data-text=
+                          "【VRchat想定】黒ネコネックレス | MIUKI'S SHOP"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
