updated at: 2020-03-03 23:32, VRChat用アバター　亜人 アルクトゥルス - アノマロ工房 - BOOTH

--- a/VRChat/25/1220025.html
+++ b/VRChat/25/1220025.html
@@ -17,14 +17,14 @@
     <meta name="twitter:description" content=
     "別の惑星に住む亜人　アルクトゥルス 恐竜が絶滅せず長い年月をかけて人のような姿に進化したら こんな姿になっていたかもしれない。 そんなコンセプトのキャラクターです。 購入して使用してくれた方がいましたら ハッシュタグ#アノマロ工房　付きでツイートしてくれるとエゴサが捗ります。 原案：リアル従兄弟のアルパカ1号（@momopaca1）">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/08302be0-dff4-4342-95bc-76db80b17129_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/e0930e34-3021-4b8c-82fa-12dcc8cb1485_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRChat用アバター　亜人 アルクトゥルス - アノマロ工房 - BOOTH">
     <meta property="og:description" content=
     "別の惑星に住む亜人　アルクトゥルス 恐竜が絶滅せず長い年月をかけて人のような姿に進化したら こんな姿になっていたかもしれない。 そんなコンセプトのキャラクターです。 購入して使用してくれた方がいましたら ハッシュタグ#アノマロ工房　付きでツイートしてくれるとエゴサが捗ります。 原案：リアル従兄弟のアルパカ1号（@momopaca1）">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/08302be0-dff4-4342-95bc-76db80b17129_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/e0930e34-3021-4b8c-82fa-12dcc8cb1485_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1220025">
     <meta name="ga_dimension1" content="customer">
@@ -256,7 +256,7 @@
                             <img alt="VRChat用アバター　亜人 アルクトゥルス"
                             class="market-item-detail-item-image"
                             src=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/08302be0-dff4-4342-95bc-76db80b17129_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/e0930e34-3021-4b8c-82fa-12dcc8cb1485_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -265,7 +265,7 @@
                             <img alt="VRChat用アバター　亜人 アルクトゥルス"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/7992d147-e848-4de6-8c98-22f090f5a2b6_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/a053f81a-5c69-41f4-831e-8e985fa042a4_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -274,7 +274,7 @@
                             <img alt="VRChat用アバター　亜人 アルクトゥルス"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/b46bb6d3-c791-4413-ad49-2fd1c213973d_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/19a16d65-443f-41de-942d-002a10956ce1_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -283,7 +283,7 @@
                             <img alt="VRChat用アバター　亜人 アルクトゥルス"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/237402cd-9822-43d6-a3e7-daaacc59dd50_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/e0ef327e-228f-4cb7-8e7b-98e09cb82063_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -292,7 +292,7 @@
                             <img alt="VRChat用アバター　亜人 アルクトゥルス"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/4354361d-6670-4897-a7d2-df31de7b33fb_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/638cedab-523c-400b-ace3-d680a0c98d31_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -301,7 +301,7 @@
                             <img alt="VRChat用アバター　亜人 アルクトゥルス"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/9e2725eb-7a90-4442-a153-8115aef0aa0b_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/34441c0e-b43e-412f-8bb7-666143102b2b_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -310,7 +310,16 @@
                             <img alt="VRChat用アバター　亜人 アルクトゥルス"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/ad106460-9d03-42b4-b9f3-e96111752556_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/b4eeb0f8-9463-44ef-8519-c5cf4c9084a9_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="VRChat用アバター　亜人 アルクトゥルス"
+                            class="market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/f61aaad6-bd6b-4fcd-87d7-8cc920236ea7_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -331,31 +340,35 @@
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/08302be0-dff4-4342-95bc-76db80b17129_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/e0930e34-3021-4b8c-82fa-12dcc8cb1485_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/7992d147-e848-4de6-8c98-22f090f5a2b6_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/a053f81a-5c69-41f4-831e-8e985fa042a4_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/b46bb6d3-c791-4413-ad49-2fd1c213973d_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/19a16d65-443f-41de-942d-002a10956ce1_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/237402cd-9822-43d6-a3e7-daaacc59dd50_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/e0ef327e-228f-4cb7-8e7b-98e09cb82063_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/4354361d-6670-4897-a7d2-df31de7b33fb_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/638cedab-523c-400b-ace3-d680a0c98d31_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/9e2725eb-7a90-4442-a153-8115aef0aa0b_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/34441c0e-b43e-412f-8bb7-666143102b2b_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/ad106460-9d03-42b4-b9f3-e96111752556_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/b4eeb0f8-9463-44ef-8519-c5cf4c9084a9_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/f61aaad6-bd6b-4fcd-87d7-8cc920236ea7_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
