updated at: 2020-03-03 23:34, 【VRoid】目力強め女の子パーツ &amp; 設定値 - Takuya Tazoe - BOOTH

--- a/VRChat/90/1223190.html
+++ b/VRChat/90/1223190.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRoid】目力強め女の子パーツ & 設定値 - ConsoleSoup - BOOTH
+      【VRoid】目力強め女の子パーツ & 設定値 - Takuya Tazoe - BOOTH
     </title>
     <meta name="description" content=
     "Textureとパラメーターを設定することで画像のようなキャラクターの顔を作ることができます。 不明点は連絡先からどうぞ。 モデルの追加方法https://note.mu/consolesoup/n/nda1481cce96f#pkcge 【改変可】【商用可】【アバターサービス利用可】">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRoid】目力強め女の子パーツ &amp; 設定値 - ConsoleSoup - BOOTH">
+    "【VRoid】目力強め女の子パーツ &amp; 設定値 - Takuya Tazoe - BOOTH">
     <meta name="twitter:description" content=
     "Textureとパラメーターを設定することで画像のようなキャラクターの顔を作ることができます。 不明点は連絡先からどうぞ。 モデルの追加方法https://note.mu/consolesoup/n/nda1481cce96f#pkcge 【改変可】【商用可】【アバターサービス利用可】">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e7b87c36-9f3a-4f4c-90ee-32cdd490dac6/i/1223190/a0f6501d-851f-49ab-bd66-155729ad6462_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRoid】目力強め女の子パーツ &amp; 設定値 - ConsoleSoup - BOOTH">
+    "【VRoid】目力強め女の子パーツ &amp; 設定値 - Takuya Tazoe - BOOTH">
     <meta property="og:description" content=
     "Textureとパラメーターを設定することで画像のようなキャラクターの顔を作ることができます。 不明点は連絡先からどうぞ。 モデルの追加方法https://note.mu/consolesoup/n/nda1481cce96f#pkcge 【改変可】【商用可】【アバターサービス利用可】">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://consolesoup.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ConsoleSoup" class=
+                            <img alt="Takuya Tazoe" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5448764/icon_image/45095018-eb6f-4880-9615-dd52d952171d_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ConsoleSoup
+                              Takuya Tazoe
                             </div>
                           </div></a>
                         </div>
@@ -226,7 +226,7 @@
                           "https://booth.pm/ja/items/1223190"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【VRoid】目力強め女の子パーツ &amp; 設定値 | ConsoleSoup"
+                          "【VRoid】目力強め女の子パーツ &amp; 設定値 | Takuya Tazoe"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
