updated at: 2020-03-04 00:16, 3Dアバター「巡璃めぐる」 - 黒猫洋品店 - BOOTH

--- a/VRChat/32/1198232.html
+++ b/VRChat/32/1198232.html
@@ -6,7 +6,7 @@
       3Dアバター「巡璃めぐる」 - 黒猫洋品店 - BOOTH
     </title>
     <meta name="description" content=
-    "VRC向けアバター「巡璃めぐる」 更新：v1.7 ●VRMファイルの追加 ●胸揺れのDynamicBoneが複数設定されていた不具合 更新：v1.6 ●UTSフォルダの内容が欠けていた ●一部ダイナミックボーンが設定されていなかった 更新：v1.5 ●胸揺れのDynamicBoneが片方しか設定されていなかった不具合、 ●マツゲの一部が青くなっていた不具合の修正。 更新：v1.4 ●両足のコライダーがisTriggerになっていなかった不具合の修正。 ■ご利用方法 新しいプロジェクトを作成→VRCSDKとDynamicBoneをインポート→当unitypackageをインポート。">
+    "VRC向けアバター「巡璃めぐる」 特筆事項 ●「ふぃぎゅあばたー」での利用可能　https://gitlab.com/figureavatar/figureavatar/ ●「『それなり～の』アバターフィギュア」での利用可能　http://htc.hotaru-printing.com/Avatar3dfbx.html 更新：v1.7 ●VRMファイルの追加 ●胸揺れのDynamicBoneが複数設定されていた不具合 更新：v1.6 ●UTSフォルダの内容が欠けていた ●一部ダイナミックボーンが設定されていなかった 更新：v1.5">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1198232">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "3Dアバター「巡璃めぐる」 - 黒猫洋品店 - BOOTH">
     <meta name="twitter:description" content=
-    "VRC向けアバター「巡璃めぐる」 更新：v1.7 ●VRMファイルの追加 ●胸揺れのDynamicBoneが複数設定されていた不具合 更新：v1.6 ●UTSフォルダの内容が欠けていた ●一部ダイナミックボーンが設定されていなかった 更新：v1.5 ●胸揺れのDynamicBoneが片方しか設定されていなかった不具合、 ●マツゲの一部が青くなっていた不具合の修正。 更新：v1.4 ●両足のコライダーがisTriggerになっていなかった不具合の修正。 ■ご利用方法 新しいプロジェクトを作成→VRCSDKとDynamicBoneをインポート→当unitypackageをインポート。">
+    "VRC向けアバター「巡璃めぐる」 特筆事項 ●「ふぃぎゅあばたー」での利用可能　https://gitlab.com/figureavatar/figureavatar/ ●「『それなり～の』アバターフィギュア」での利用可能　http://htc.hotaru-printing.com/Avatar3dfbx.html 更新：v1.7 ●VRMファイルの追加 ●胸揺れのDynamicBoneが複数設定されていた不具合 更新：v1.6 ●UTSフォルダの内容が欠けていた ●一部ダイナミックボーンが設定されていなかった 更新：v1.5">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/1198232/76f53b18-389c-4c72-9d3c-ff68e8012263_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "3Dアバター「巡璃めぐる」 - 黒猫洋品店 - BOOTH">
     <meta property="og:description" content=
-    "VRC向けアバター「巡璃めぐる」 更新：v1.7 ●VRMファイルの追加 ●胸揺れのDynamicBoneが複数設定されていた不具合 更新：v1.6 ●UTSフォルダの内容が欠けていた ●一部ダイナミックボーンが設定されていなかった 更新：v1.5 ●胸揺れのDynamicBoneが片方しか設定されていなかった不具合、 ●マツゲの一部が青くなっていた不具合の修正。 更新：v1.4 ●両足のコライダーがisTriggerになっていなかった不具合の修正。 ■ご利用方法 新しいプロジェクトを作成→VRCSDKとDynamicBoneをインポート→当unitypackageをインポート。">
+    "VRC向けアバター「巡璃めぐる」 特筆事項 ●「ふぃぎゅあばたー」での利用可能　https://gitlab.com/figureavatar/figureavatar/ ●「『それなり～の』アバターフィギュア」での利用可能　http://htc.hotaru-printing.com/Avatar3dfbx.html 更新：v1.7 ●VRMファイルの追加 ●胸揺れのDynamicBoneが複数設定されていた不具合 更新：v1.6 ●UTSフォルダの内容が欠けていた ●一部ダイナミックボーンが設定されていなかった 更新：v1.5">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/1198232/76f53b18-389c-4c72-9d3c-ff68e8012263_base_resized.jpg">
     <meta property="og:url" content=
@@ -298,7 +298,10 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            VRC向けアバター「巡璃めぐる」 更新：v1.7 ●VRMファイルの追加
+                            VRC向けアバター「巡璃めぐる」 特筆事項
+                            ●「ふぃぎゅあばたー」での利用可能　https://gitlab.com/figureavatar/figureavatar/
+                            ●「『それなり～の』アバターフィギュア」での利用可能　http://htc.hotaru-printing.com/Avatar3dfbx.html
+                            更新：v1.7 ●VRMファイルの追加
                             ●胸揺れのDynamicBoneが複数設定されていた不具合 更新：v1.6
                             ●UTSフォルダの内容が欠けていた
                             ●一部ダイナミックボーンが設定されていなかった 更新：v1.5
