updated at: 2020-03-04 00:20, [再配布可能] SFGun [無料] - Takuya Tazoe - BOOTH

--- a/VRChat/31/1195931.html
+++ b/VRChat/31/1195931.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      [再配布可能] SFGun [無料] - ConsoleSoup - BOOTH
+      [再配布可能] SFGun [無料] - Takuya Tazoe - BOOTH
     </title>
     <meta name="description" content=
     "完全オリジナルです。 30分ほどで適当に作ったSFっぽい銃です。 テクスチャは10秒くらいで作ったやつです。 ポリゴン数：272 マテリアル数：1 修正依頼等あればTwitterまで、時間があれば対応します。 他にもいろいろ配布・販売してますのでよかったら！ 【アバターサービス利用可】【改変可】【再配布可】【商用可】">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "[再配布可能] SFGun [無料] - ConsoleSoup - BOOTH">
+    "[再配布可能] SFGun [無料] - Takuya Tazoe - BOOTH">
     <meta name="twitter:description" content=
     "完全オリジナルです。 30分ほどで適当に作ったSFっぽい銃です。 テクスチャは10秒くらいで作ったやつです。 ポリゴン数：272 マテリアル数：1 修正依頼等あればTwitterまで、時間があれば対応します。 他にもいろいろ配布・販売してますのでよかったら！ 【アバターサービス利用可】【改変可】【再配布可】【商用可】">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e7b87c36-9f3a-4f4c-90ee-32cdd490dac6/i/1195931/d897d702-10dc-479c-a2bb-c11658a83d36_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "[再配布可能] SFGun [無料] - ConsoleSoup - BOOTH">
+    "[再配布可能] SFGun [無料] - Takuya Tazoe - BOOTH">
     <meta property="og:description" content=
     "完全オリジナルです。 30分ほどで適当に作ったSFっぽい銃です。 テクスチャは10秒くらいで作ったやつです。 ポリゴン数：272 マテリアル数：1 修正依頼等あればTwitterまで、時間があれば対応します。 他にもいろいろ配布・販売してますのでよかったら！ 【アバターサービス利用可】【改変可】【再配布可】【商用可】">
     <meta property="og:image" content=
@@ -120,11 +120,11 @@
                           href="https://consolesoup.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ConsoleSoup" class=
+                            <img alt="Takuya Tazoe" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5448764/icon_image/45095018-eb6f-4880-9615-dd52d952171d_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ConsoleSoup
+                              Takuya Tazoe
                             </div>
                           </div></a>
                         </div>
@@ -277,7 +277,7 @@
                           "https://booth.pm/ja/items/1195931"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "[再配布可能] SFGun [無料] | ConsoleSoup"
+                          "[再配布可能] SFGun [無料] | Takuya Tazoe"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
